round 1 of publication updates
PIs paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,20 @@
 
 @string{aps = {American Physical Society,}}
 
+@article{NevillePIs2017,
+  author  = {Henry Adams and Tegan Emerson and Michael Kirby and Rachel Neville and Chris Peterson and Patrick Shipman and Sofya Chepushtanova and Eric Hanson and Francis Motta and Lori Ziegelmeier},
+  title   = {Persistence Images: A Stable Vector Representation of Persistent Homology},
+  journal = {Journal of Machine Learning Research},
+  year    = {2017},
+  volume  = {18},
+  number  = {8},
+  pages   = {1--35},
+  url     = {http://jmlr.org/papers/v18/16-337.html}, 
+  abstract = {Many data sets can be viewed as a noisy sampling of an underlying space, and tools from topological data analysis can characterize this structure for the purpose of knowledge discovery. One such tool is persistent homology, which provides a multiscale description of the homological features within a data set. A useful representation of this homological information is a persistence diagram (PD). Efforts have been made to map PDs into spaces with additional structure valuable to machine learning tasks. We convert a PD to a finite- dimensional vector representation which we call a persistence image (PI), and prove the stability of this transformation with respect to small perturbations in the inputs. The discriminatory power of PIs is compared against existing methods, showing significant performance gains. We explore the use of PIs with vector-based machine learning tools, such as linear sparse support vector machines, which identify features containing discriminating topological information. Finally, high accuracy inference of parameter values from the dynamic output of a discrete dynamical system (the linked twist map) and a partial differential equation (the anisotropic Kuramoto-Sivashinsky equation) provide a novel application of the discriminatory power of PIs.}, 
+  google_scholar_id={ILdtDFAAAAAJ}, 
+  preview = {periodic-sep-sierp.png}
+}
+
 @book{einstein1920relativity,
   title={Relativity: the Special and General Theory},
   author={Einstein, Albert},
