update measures of order paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -20,6 +20,25 @@
   preview = {periodic-sep-sierp.png}
 }
 
+@article{NevilleOrder2018,
+  title = {Measures of order for nearly hexagonal lattices},
+  journal = {Physica D: Nonlinear Phenomena},
+  volume = {380-381},
+  pages = {17-30},
+  year = {2018},
+  issn = {0167-2789},
+  doi = {https://doi.org/10.1016/j.physd.2018.05.005},
+  url = {https://www.sciencedirect.com/science/article/pii/S0167278917306851},
+  html     = {https://www.sciencedirect.com/science/article/pii/S0167278917306851}, 
+  bibtex_show={true},
+  pdf={MeasureofOrder_paper.pdf},
+  author = {Francis C. Motta and Rachel Neville and Patrick D. Shipman and Daniel A. Pearson and R. Mark Bradley},
+  keywords = {Pattern formation, Nanostructures, Persistent homology},
+  abstract = {Motivated by hexagonal patterns with defects in natural and laboratory systems, we compare quantitative measures of order for nearly hexagonal, planar lattices. These include a spectral measure of order based on the Fourier transform, a geometric measure of order using the Delaunay triangulation, and topological measures of order introduced in this paper. The topological measures are based on a tool from topological data analysis called persistent homology. We contrast these measures of order by comparing their sensitivity to perturbations of Bravais lattices. We then study the imperfect hexagonal arrangements of nanodots produced by numerical simulations of partial differential equations that model the surface of a binary alloy undergoing erosion by a broad ion beam. These numerical experiments further distinguish the various measures of hexagonal order and highlight the role of various model parameters in the formation and elimination of defects. Finally, we quantify the dependence of order on prepatterning the surface to suggest experimental protocols that could lead to improved order in nanodot arrays.}, 
+  google_scholar_id={ILdtDFAAAAAJ:u-x6o8ySG0sC}, 
+  preview = {PH_nearperfecthex.png}
+}
+
 @book{einstein1920relativity,
   title={Relativity: the Special and General Theory},
   author={Einstein, Albert},
