fractal paper update

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -39,6 +39,38 @@
   preview = {PH_nearperfecthex.png}
 }
 
+@InProceedings{NevilleFractal2020,
+  author="Adams, Henry
+  and Aminian, Manuchehr
+  and Farnell, Elin
+  and Kirby, Michael
+  and Mirth, Joshua
+  and Neville, Rachel
+  and Peterson, Chris
+  and Shonkwiler, Clayton",
+  editor="Baas, Nils A.
+  and Carlsson, Gunnar E.
+  and Quick, Gereon
+  and Szymik, Markus
+  and Thaule, Marius",
+  title="A Fractal Dimension for Measures via Persistent Homology",
+  booktitle="Topological Data Analysis",
+  year="2020",
+  publisher="Springer International Publishing",
+  address="Cham",
+  pages="1--31",
+  doi = {http://dx.doi.org/10.1007/978-3-030-43408-3_1},
+  url = {https://link.springer.com/chapter/10.1007/978-3-030-43408-3_1},
+  html     = {https://link.springer.com/chapter/10.1007/978-3-030-43408-3_1}, 
+  bibtex_show={true},
+  abstract="We use persistent homology in order to define a family of fractal dimensions, denoted dimPHi($\mu$){\$}{\$}{\backslash}dim {\_}{\{}{\backslash}mathrm {\{}PH{\}}{\}}^i({\backslash}mu ){\$}{\$}for each homological dimension i{\thinspace}≥{\thinspace}0, assigned to a probability measure $\mu$ on a metric space. The case of zero-dimensional homology (i{\thinspace}={\thinspace}0) relates to work by Steele (Ann Probab 16(4): 1767--1787, 1988) studying the total length of a minimal spanning tree on a random sampling of points. Indeed, if $\mu$ is supported on a compact subset of Euclidean space ℝm{\$}{\$}{\backslash}mathbb {\{}R{\}}^m{\$}{\$}for m{\thinspace}≥{\thinspace}2, then Steele's work implies that dimPH0($\mu$)=m{\$}{\$}{\backslash}dim {\_}{\{}{\backslash}mathrm {\{}PH{\}}{\}}^0({\backslash}mu )=m{\$}{\$}if the absolutely continuous part of $\mu$ has positive mass, and otherwise dimPH0($\mu$)<m{\$}{\$}{\backslash}dim {\_}{\{}{\backslash}mathrm {\{}PH{\}}{\}}^0({\backslash}mu )<m{\$}{\$}. Experiments suggest that similar results may be true for higher-dimensional homology 0{\thinspace}<{\thinspace}i{\thinspace}<{\thinspace}m, though this is an open question. Our fractal dimension is defined by considering a limit, as the number of points n goes to infinity, of the total sum of the i-dimensional persistent homology interval lengths for n random points selected from $\mu$ in an i.i.d. fashion. To some measures $\mu$, we are able to assign a finer invariant, a curve measuring the limiting distribution of persistent homology interval lengths as the number of points goes to infinity. We prove this limiting curve exists in the case of zero-dimensional homology when $\mu$ is the uniform distribution over the unit interval, and conjecture that it exists when $\mu$ is the rescaled probability measure for a compact set in Euclidean space with positive Lebesgue measure.",
+  google_scholar_id={ILdtDFAAAAAJ:u5HHmVD_uO8C}, 
+  preview = {periodic-sep-sierp.png},  
+  pdf={Fractal_paper.pdf},
+}
+
+
+
 @book{einstein1920relativity,
   title={Relativity: the Special and General Theory},
   author={Einstein, Albert},
