more paper updates - confchem, dod

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,8 +1,5 @@
 ---
 ---
-
-@string{aps = {American Physical Society,}}
-
 @article{NevillePIs2017,
   author  = {Henry Adams and Tegan Emerson and Michael Kirby and Rachel Neville and Chris Peterson and Patrick Shipman and Sofya Chepushtanova and Eric Hanson and Francis Motta and Lori Ziegelmeier},
   title   = {Persistence Images: A Stable Vector Representation of Persistent Homology},
@@ -71,35 +68,47 @@
 
 
 
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@phdthesis{NevilleThesis2017,
+  author  = {Rachel Neville},
+  title   = {Topological techniques for characterization of patterns in differential equations},
+  year={2017},
+  school={Colorado State University}
+  html     = {https://libproxy.nau.edu/login?url=https://www.proquest.com/dissertations-theses/topological-techniques-characterization-patterns/docview/1978158716/se-2?accountid=12706}, 
+  bibtex_show={true},
+  pdf={Thesis_paper.pdf},
+  google_scholar_id={ILdtDFAAAAAJ:9yKSN-GCB0IC}, 
+  preview = {io_ex.png}
 }
 
-@book{einstein1956investigations,
+
+@article{NevilleChemConf2018,
+  author = {Neville, Rachel and Shipman, Patrick D. and Levinger, Nancy E. and Krummel, Amber T.},
+  title = {ConfChem Conference on Mathematics in Undergraduate Chemistry Instruction: Applied Mathematics for Chemistry Majors},
+  journal = {Journal of Chemical Education},
+  volume = {95},
+  number = {8},
+  pages = {1438-1439},
+  year = {2018},
+  doi = {10.1021/acs.jchemed.8b00107},
+  url = {https://doi.org/10.1021/acs.jchemed.8b00107},
+  html = {https://doi.org/10.1021/acs.jchemed.8b00107}
   bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+  pdf={ChemConf.pdf},
+  abstract = {To succeed in physical chemistry courses, students need competence with a significant amount of mathematics, including ordinary and partial differential equations and linear operators. This can present a barrier to student success because many of these topics are not taught in the traditional prerequisite calculus sequence. Through a collaboration of the Departments of Chemistry and Mathematics, Colorado State University has developed and implemented a two-semester sequence of courses, Applied Mathematics for Chemists, aimed specifically at providing students with the mathematical tools necessary for success in physical chemistry. This report summarizes one of the invited papers to the ConfChem online conference on Mathematics in Undergraduate Chemistry Instruction, held from October 23 to November 27, 2017, and hosted by the ACS DivCHED Committee on Computers in Chemical Education (CCCE).}, 
+  google_scholar_id={ILdtDFAAAAAJ:u-x6o8ySG0sC}, 
+  preview = {huckel.png}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+
+@article{NevilleNgram2015,
+  author = {Neville, Rachel},
+  title = {N-gram Modleing for Document Retrieval},
+  journal = {Internal Paper, Enterprise Operations Research, Modeling Simulation; Department of Defense},
+  year = {2015},
+  preview = {ngram.png}
 }
+
+
 
 @article{PhysRev.47.777,
   abbr={PhysRev},
@@ -127,55 +136,3 @@
   selected={true}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
-}
